erDiagram
    %% EER Diagram (conceptual): Supertype/Subtype + key constraints.
    %% Note: Mermaid ER diagrams don't enforce EER constraints (total/disjoint) —
    %% the PostgreSQL implementation models the structure, while strict total/disjoint
    %% constraints are not enforced by the schema.

    %% --- Supertype ---
    app_user {
        int user_id PK
        varchar first_name
        varchar last_name
        varchar email UK
        varchar password_hash
        date date_of_birth
        varchar street
        varchar district
        varchar city
        varchar postal_code
        varchar country
        timestamp created_at
    }

    %% --- Subtypes (specializations) ---
    patient {
        int patient_id PK "FK to app_user.user_id"
        varchar emergency_contact_name
        varchar emergency_contact_phone
    }

    doctor {
        int doctor_id PK "FK to app_user.user_id"
        varchar license_number UK
        int department_id FK
    }

    admin {
        int admin_id PK "FK to app_user.user_id"
        text permissions
    }

    %% --- Multivalued attributes ---
    user_phone {
        int user_id PK, FK
        varchar phone_number PK
    }

    patient_allergy {
        int patient_id PK, FK
        varchar allergy_name PK
    }

    %% --- Core entities needed for the specialization context ---
    hospital {
        int hospital_id PK
        varchar name
        varchar address
    }

    department {
        int department_id PK
        int hospital_id FK
        varchar name
    }

    specialty {
        int specialty_id PK
        varchar name UK
    }

    doctor_specialty {
        int doctor_id PK, FK
        int specialty_id PK, FK
    }

    %% --- Relationships ---
    app_user ||--o{ patient : "is a"
    app_user ||--o{ doctor : "is a"
    app_user ||--o{ admin : "is a"
    app_user ||--|{ user_phone : "has"

    patient ||--|{ patient_allergy : "has"

    hospital ||--|{ department : "contains"
    department ||--o{ doctor : "employs"

    doctor ||--|{ doctor_specialty : "has"
    specialty ||--|{ doctor_specialty : "defines"
